src/tests/testfiles/const/9.txt
testfiles/const/9.c:8:5: error: passing argument 1 of 'f' discards 'const' qualifier, expected 'int *' but got 'const int *' 
f(&a);
^
